--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@beequip/eslint-config-react-typescript",
-  "version": "0.0.1",
-  "description": "ESlint config for Node.js/Typescript projects at Beequip.",
+  "name": "@beequip/eslint-config-node-typescript",
+  "version": "0.0.0",
+  "description": "ESlint config for Node.js/Typescript projects at Beequip",
   "main": "index.js",
   "files": [
     "index.js"
@@ -12,7 +12,8 @@
     "@typescript-eslint/parser": "^2.12.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-jest": "^23.1.1",
-    "eslint-plugin-prettier": "^3.1.2"
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-node": "^10.0.0"
   },
   "peerDependencies": {
     "eslint": "^6.8.0",
