--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@beequip/eslint-config-node-typescript",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "ESlint config for Node.js/Typescript projects at Beequip",
   "main": "index.js",
   "files": [
@@ -12,8 +12,8 @@
     "@typescript-eslint/parser": "^2.12.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-jest": "^23.1.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-node": "^10.0.0"
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.2"
   },
   "peerDependencies": {
     "eslint": "^6.8.0",
