--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "peerDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.4"
   },
   "devDependencies": {
     "np": "^5.1.2"
