--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "@beequip/eslint-config-node-typescript",
   "version": "0.1.3",
-  "description": "ESlint config for Node.js/Typescript projects at Beequip",
+  "description": "ESLint config for Node.js/Typescript projects at Beequip",
   "main": "index.js",
   "files": [
     "index.js"
   ],
   "license": "MIT",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jest": "^23.18.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4"
   },
   "peerDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^7"
   },
   "devDependencies": {
     "np": "^6.3.2"
