--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "@beequip/eslint-config-node-typescript",
   "version": "0.2.0",
-  "description": "ESLint config for Node.js/Typescript projects at Beequip",
+  "description": "ESLint config for Node and TypeScript projects at Beequip",
   "main": "index.js",
   "files": [
     "index.js"
   ],
   "license": "MIT",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jest": "^23.18.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4"
+    "eslint-plugin-prettier": "^5.1.3"
   },
   "peerDependencies": {
     "eslint": "^7"
   },
   "devDependencies": {
-    "np": "^6.3.2"
+    "np": "^10.0.5"
   },
   "scripts": {
     "release": "np --no-tests"
