--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eslint-plugin-prettier": "^5.1.3"
   },
   "peerDependencies": {
-    "eslint": "^7"
+    "eslint": "^7 || ^8"
   },
   "devDependencies": {
     "np": "^10.0.5"
